--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -20,7 +20,7 @@
         <h2 class="secondaryheading">PROJECTS</h2>
         <ul>
             <li><a href="https://github.com/pranathi-cola/C-projects/blob/main/shell.c" target="__blank" rel="noopener noreferer">Shell</a> - This is a mini version of shell which can do multiple actions like echo, move through folders, run files, check executables, enter the files and folders present in a specific folder, etc. </li>
-            <li><a href="portfolio.html">Portfolio</a> - A portfolio Website using HTML5 and CSS. It displays my skills and education.</li>
+            <li><a href="https://pranathi-cola.github.io/Web-Dev/Project-2" target="__blank" rel="noopener noreferer">Portfolio</a> - A portfolio Website using HTML5 and CSS. It displays my skills and education.</li>
             <li>A Matrix Calculator using gate level verilog. It adds, subtracts, multiplies and divides the given two matrices using Gate Level Verilog</li>
         </ul>
 
