Few changes with style

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <h1 class="wishes"></h1>
+    <div class="maincontent">
         <div class="content"></div>
         <div class="image"><img src="background.png"></div>
+    </div>
     </body>
 </html>
