Remove image overflow

--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="basic-info" id="basic-info">
                 <div class="my-img">
-                    <img src="img/pranathi.jpg">
+                    <img src="img/pranathi.png">
                 </div>
                 <div class="greeting"> 
                     <h1 class="intro">
