--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -28,6 +28,8 @@
                     </h1>
                     <h3 class="position">
                         <span class="position1">Entry Level Programmer</span>
+                        <span class="position2">Web Developer</span>
+                        <span class="position3">Web Designer</span>
                     </h3>
                     <p class="about-me">
                         I am an passionate learner, quick to grasp new technologies to design efficient and scalable products. 
@@ -146,23 +148,5 @@
                 </div>
             </div>
         </div>
-        <script>
-            const text = document.querySelector(".position1");
-
-            const textLoad = () => {
-                setTimeout(()=>{
-                    text.textContent = "Entry Level Programmer";
-                }, 0);
-                setTimeout(()=>{
-                    text.textContent = "Web Developer";
-                }, 4000);
-                setTimeout(()=>{
-                    text.textContent = "Web Designer";
-                }, 8000);
-            }
-
-            textLoad();
-            setInterval(textLoad, 12000);
-        </script>
     </body>
 </html>
