--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -11,10 +11,9 @@
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <div id="particles-js"></div>
         <script src="script.js"></script>
-        <div id="particles-js">
+        <div id="particles-js" class="main-body">
             <div class="header">
                 <a class="inner-links" href="#basic-info">About me</a>
-                <a class="inner-links" href="#contacts">Contact</a>
                 <a class="inner-links" href="#education">Education</a>
             </div>
             <div class="basic-info" id="basic-info">
@@ -97,7 +96,7 @@
                             <p>A Gate-Level Verilog Matrix Calculator, capable of performing addition, subtraction, multiplication, and division on two input matrices.</p>
                         </div>
                     </div>
-                    <div class="project-card">
+                    <!--<div class="project-card">
                         <div class="project-img">
                             <img class="img-project" src="img/web-scraping.png">
                         </div>
@@ -106,7 +105,7 @@
                             <a href="#" target="__blank" rel="noopener noreferer">Some python</a>
                             <p></p>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="education" id="education">
